--- a/Presentación/FRM_Contenido.resx
+++ b/Presentación/FRM_Contenido.resx
@@ -121,7 +121,7 @@
   <data name="btn_Torneo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACwAAAAsCAYAAAAehFoBAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DwAACw8BkvkDpQAABGFJREFUWEfNmVnIVVUUx2+WWqbmg2RIgwXaYD40Yb3YTKYvImovUb3Ui5pE0fBQ
+        DgAACw4BQL7hQQAABGFJREFUWEfNmVnIVVUUx2+WWqbmg2RIgwXaYD40Yb3YTKYvImovUb3Ui5pE0fBQ
         vYVUalnRANFA5DxhoVk0R1lRVGAWKWYGFtk80Nzvd7iLb99zz6X73XOOfn/4Pey9z1173333WWvtdRv9
         1DFwDzwFa+B5eBPehx3wFfwI/3bJb/A13A8HQeVaAU70PXxbEbH4GVCphoC79wNUuRvfgQveDLMTZsHp
         0NVcJ8EtcB883GQVaHgnVKltELtchMftZCjUYPA8/QNFH5YPoEq9CEXzpHwBR0CbHoR4yBfoabgdLocb
@@ -146,7 +146,7 @@
   <data name="btn_Programacion.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DwAACw8BkvkDpQAAAf5JREFUaEPtmE1LFVEch8dSKAhBUFJo1aJWhgraKlBo5yqwXd+g0q9gEaKIiO5E
+        DgAACw4BQL7hQQAAAf5JREFUaEPtmE1LFVEch8dSKAhBUFJo1aJWhgraKlBo5yqwXd+g0q9gEaKIiO5E
         ENqUuhBCXASFEL2JldtcuHDjKtQPYNbzc86Be4fLnXvHGf9XOA88cM5w5s/5+XJeJgoEAoFAIAee4Wjc
         LOO5M8kYPo2bjcE73IibZaw7k2is3jGlC287P+BmSd/70Zl8rrF6x/dV68K4iTv4L2d/oWoXzjQe4gg+
         dH7FrZK+95sz+Vxj9Y7vP8YjnMLCWUH9WZSSx/+Aaqp24VQKMINzcbOMWWcSjdU7pZgGyIOGCHAVW+Jm
@@ -161,7 +161,7 @@
   <data name="btn_Posiciones.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DwAACw8BkvkDpQAAAs9JREFUaEPtmEvITGEYgH93ck+uyS0LIZfEyj1ZWcgtue7IbWGDKIkspYRSJCUW
+        DgAACw4BQL7hQQAAAs9JREFUaEPtmEvITGEYgH93ck+uyS0LIZfEyj1ZWcgtue7IbWGDKIkspYRSJCUW
         NhYsJIlEKcl1QcitkLuELHie8/3zm5nOzPxH05mZOk89zfud/8z8857zfe/3zmnKyMjIqCaTcBuux74e
         aCS24hvcjyfxPU7BhmAEfsSh0SiwGm+HsP5ZgedD2EJH/I3do1GdMxcfYNtoFBiJ3zD/WN3SDp0uh3EI
         TsSbuBsbhrX4J8/POAFrgvN3F95Br+wW9CqX4hA+wnnonB+AG/ADLsXUOYUuysk4DW/gQYxjOT7ErtGo
@@ -179,7 +179,7 @@
   <data name="btn_RegistrarEquipo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
-        MAAA6mAAADqYAAAXcJy6UTwAAAAJcEhZcwAACw8AAAsPAZL5A6UAAAAHdElNRQfoBBkCDiPRMgUIAAAF
+        MAAA6mAAADqYAAAXcJy6UTwAAAAJcEhZcwAACw4AAAsOAUC+4UEAAAAHdElNRQfoBBkCDiPRMgUIAAAF
         W0lEQVRoQ+3ZVegtVRTH8Wt3dzd2iyjGm4qFASpit2Ki2KJiKypivIhi4oOIhSIGit1doGKAXdhi+/tc
         zobNMP9zDj7M3Ct3wZdzZmbPzNpr7732WmsmTZP/kUwfFgkLTD6aymSmcGR4LTwddg861IusFY4NW4QZ
         nRhDlg7vhX8GvDk417nMEE4JX4Rvwulh9WBazBYmkuXDR6F04MewfehFVghXhWfC2+Hdwf87wmlhzbBo
@@ -209,7 +209,7 @@
   <data name="btn_RegistroJugador.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DwAACw8BkvkDpQAAAoJJREFUaEPt2surTlEYx/GX/0AZMVBKykDK4Lgrl1w6yMCEjBQDl4EJkRgauQwN
+        DgAACw4BQL7hQQAAAoJJREFUaEPt2surTlEYx/GX/0AZMVBKykDK4Lgrl1w6yMCEjBQDl4EJkRgauQwN
         nYHbSEkpGUiSUIiUy4ABE7lfQuH7q73rabf22Wetdz17v3Ke+vSed3fW3vt3Wutda6/39MZrgGsXjjqZ
         D/e6gz84hE2ZbMN2bMYEuFYZYDXe4RVeZPYEQ3CpMsDa4nUmQn/VHGYhe1UDrClePaibbkXWajuArncc
         2aqLAPo5W4iuAkiWEF0GkL5DdB1A+goxCAEkOURTgJc4gcfmWKpjWIXQHCFTEF1NARbjAubhK7YgdPHS
@@ -226,7 +226,7 @@
   <data name="btn_Resultados.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DwAACw8BkvkDpQAAAelJREFUaEPtmc0rRFEYxgcLJd8rXzuKDRuUpZTIgq2kKB9bQilLxUpJIjZjy8pO
+        DgAACw4BQL7hQQAAAelJREFUaEPtmc0rRFEYxgcLJd8rXzuKDRuUpZTIgq2kKB9bQilLxUpJIjZjy8pO
         7P0BFijZKh/JRrL1PPfM1J1733Mv4zT3zHR+9av33HtO532amXOnmZTD4XA4TFIHV+C6pbI39qhlBD7D
         Y0tlb+xRyyi8VqWVsDf2qKVkAyxB6SWVHIY6eE9aI8k9g+Qd4AHuQ+mD5fcScp4O3uMcaa1fzuOeQf4V
         oE+VkWzAuACcEwf3cgH8lESALbgY4zmMC8A50lq/3MtogGUonRSSUQ8a3pPWSHLPIHkHsAUXIGmMBmiG
@@ -240,7 +240,26 @@
   <data name="btn_SalirPresentacion.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
-        MAAA6mAAADqYAAAXcJy6UTwAAAAJcEhZcwAACw4AAAsOAUC+4UEAAAAHdElNRQfoBBkCGQaftVXZAAAC
+        MAAA6mAAADqYAAAXcJy6UTwAAAAJcEhZcwAACw0AAAsNAe0HwCwAAAAHdElNRQfoBBkCGQaftVXZAAAC
+        6ElEQVRYR+3YS6hNURzH8ev9Ju8iJSVlgiQGilCKREJCGSgltwy8JmJIjCjlUYoUI4oYoJB3ykweCQPP
+        yPv9/n4HK6vdOcc5Zy2XwfnVZ3D33Xuf/9l77f9a+zQ10sh/nk7ojT6JeqEb2iBb+mMrHuE5niW4j6NY
+        gB7Ikhn4iJ8ZvcEmZClyHkp9SCqL9Eom3+64wB/4gO/RtthrHMMKzIfHxlbjBsL+R+CYTEpc4EvMxGZc
+        x3tYdPj/FzzGFaxFP8Txallk2P8efHCSEhfoQPdp7oCBWIhDuIviOLXY4xiGOMXz+XQnpdIJW6E9xmA9
+        TsIrGPbXNnRByByE/z2FXzgptXxjW5IFnMI3eMwtjEXIaFzDZ+yDPTYp9dyS8XgFj7HQWQhxeFik7WsI
+        JmIHlqKutlNPge7jvuG4uSiVrjgH9/ELrUN31JQcBXqOUumI0wid4C1qLjJngYNhm/Jvr6q9cje+Iuwb
+        iqz6duco0GLaYT/iYsqx3y5BVclVoK3mTrStEm+57amq5CrQrIFNPV4VOSfHs5FuYjKqSo4CPYexxTi1
+        +X8NwEbEt/02pqMtqkrOAovpCa9W2M+FhP2xphXO3yzQNrML7+DsUnNxJneBXrVm7MQEDMI0jEBda8Pc
+        BU6BD4nbD6MzkpK7QJ/osP0Skpf9uQt09gjbzyN7gdWs34oFzoZx+3a4zd7nLXbBkJS4QKegUXAwu1gt
+        l2KBF3EALmg9h9tchq2EU2BS4jHjy5K9ag9spn3hirqYYoGlOP6KrwN1ZRKeID65394p6io2YBxcTbeG
+        cbYoV6DHnYUL1SxxbeZq9wQeoviBXtUXcDwtg+8nrpRDK/mEM/AW25SXw2VX9vgK6VpuCy7DDy4W68B3
+        CByE789uewBfAVosTuLDsQh74W825V7k5Yp5KP5JHGsjsQoX4C8L4W1OXr3FqPTEt0hsFfbHqfANzV8W
+        /BXLppzcRnLGK+WT7DD4U69spJHfaWr6Bd4nja5kdwuwAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btn_VolverAtras.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
+        MAAA6mAAADqYAAAXcJy6UTwAAAAJcEhZcwAACwwAAAsMAT9AIsgAAAAHdElNRQfoBBkCGQaftVXZAAAC
         6ElEQVRYR+3YS6hNURzH8ev9Ju8iJSVlgiQGilCKREJCGSgltwy8JmJIjCjlUYoUI4oYoJB3ykweCQPP
         yPv9/n4HK6vdOcc5Zy2XwfnVZ3D33Xuf/9l77f9a+zQ10sh/nk7ojT6JeqEb2iBb+mMrHuE5niW4j6NY
         gB7Ikhn4iJ8ZvcEmZClyHkp9SCqL9Eom3+64wB/4gO/RtthrHMMKzIfHxlbjBsL+R+CYTEpc4EvMxGZc
